CSS-FIX: Block Toolbox icons vertical alignment issue with WP 3.8 +

--- a/views/blocks/block/public/css/block.css
+++ b/views/blocks/block/public/css/block.css
@@ -5,6 +5,7 @@
 */
 .cjt-block {min-width: 750px;}
 
+#cjtoolbox-admin {font-size: 12px !important;}
 #cjtoolbox-admin div.postbox {
 	display:none;
 	-moz-border-radius: 6px;
@@ -21,6 +22,7 @@
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
 	border-bottom-color: #cccccc;
+	font-size: 12px;
 }
 #cjtoolbox-admin #poststuff h3, .metabox-holder h3 {padding: 8px 10px;}
 /* Editor langauges list */
@@ -94,7 +96,7 @@
 	padding-left: 23px;
 	padding-top: 5px;
 	position: relative;
-	top: -9px;
+	top: -7px;
 	width: 37px !important;
 	height: 18px !important;
 }
@@ -110,7 +112,7 @@
 	padding-left: 23px;
 	padding-top: 5px;
 	position: relative;
-	top: -9px;
+	top: -7px;
 	width: 45px !important;
 	height: 18px !important;
 	margin-right: 10px !important;
